tests/baselines/reference/instanceMemberAssignsToClassPrototype.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/instanceMemberAssignsToClassPrototype.ts(7,9): error TS2322: Type '() => 无值' is not assignable to type '(x: 数字) => 数字'.
  Type '无值' is not assignable to type '数字'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/instanceMemberAssignsToClassPrototype.ts (1 errors) ====
    class C {
        foo() {
            C.prototype.foo = () => { }
        }
    
        bar(x: number): number {
            C.prototype.bar = () => { } // error
            ~~~~~~~~~~~~~~~
!!! error TS2322: Type '() => 无值' is not assignable to type '(x: 数字) => 数字'.
!!! error TS2322:   Type '无值' is not assignable to type '数字'.
            C.prototype.bar = (x) => x; // ok
            C.prototype.bar = (x: number) => 1; // ok
            return 1;
        }
    }